Fixed BUG#7620: Stored procedure packet error if show mutex status   Another multi result statement added.   Note: No test case, as it's not possible to get a deterministic result from this.